# claude-seo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
qant/: __init__.py  config.py  fetcher.py  findings.py  registry.py  run_brand_audit.py  scoring.py  suppress.py
qant/checks/: __init__.py  indexability.py  redirects.py  schema.py
qant/output/: __init__.py  json_writer.py  markdown_writer.py
qant/tests/: __init__.py  conftest.py  test_config.py  test_fetcher.py  test_findings.py  test_indexability.py  test_json_writer.py  test_markdown_writer.py  test_redirects.py  test_registry.py  test_run_brand_audit.py  test_schema.py  test_scoring.py  test_suppress.py
qant/tests/fixtures/: sample_brand_seo.yml
skills/seo/: SKILL.md
skills/seo-geo/: SKILL.md
translations/uk/: CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md
translations/uk/docs/: INSTALLATION.md  TROUBLESHOOTING.md
