[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-seo"
version = "2.0.0"
description = "Comprehensive SEO analysis skill for Claude Code"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/AgriciDaniel/claude-seo"
Repository = "https://github.com/AgriciDaniel/claude-seo"

[project.optional-dependencies]
qant = [
    "pydantic>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
]
qant-dev = [
    "pytest>=8.0,<9.0",
    "responses>=0.25,<1.0",
]

[tool.setuptools]
packages = ["qant"]
